Fixed responsive review modal

--- a/frontEnd/src/styles/reviewModal.css
+++ b/frontEnd/src/styles/reviewModal.css
@@ -172,6 +172,13 @@
         left: -50px;
     }
 
+    .set-order{
+        order: 1;
+    }
+
+    .tab-content{
+        order: 2;
+    }
     
 }
 
