Adding data fetching indicator on flavors page, updating home page text, adding documentation for reviews pages

--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -59,6 +59,14 @@
     padding: .1rem;
 }
 
+.spinner{
+    z-index: 99999999; /*Trust me. This value is needed (: */
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    translate: translate(-50%, -50%);
+}
+
 @media (min-width: 1600px) {
     .categoryContainer > div:nth-of-type(2) {
         position: fixed;
