--- a/frontEnd/src/global.css
+++ b/frontEnd/src/global.css
@@ -13,6 +13,10 @@ body {
     font-display: swap;
 }
 
+html{
+    scroll-behavior: auto !important;
+  }
+
 a {
     text-decoration: none;
     color: var(--primary-text-color);
