--- a/frontEnd/src/styles/home.css
+++ b/frontEnd/src/styles/home.css
@@ -3,6 +3,7 @@
 .mainContainer{
   min-height: 80vh;
 }
+
 .homeContainer {
   min-height: 30vh;
   display: flex;
@@ -17,6 +18,13 @@
   flex: 0 0 60%;
   flex-direction: column;
   display: flex;
+  justify-content: space-between;
+}
+
+.companyMessage > p {
+  font-size: calc(.5vw + 15px);
+  text-indent: 50px;
+  margin-top: 2.5rem;
 }
 
 .getQuote {
@@ -28,6 +36,8 @@
 .companyMessage h2 {
   white-space: nowrap;
   align-self: center;
+  font-size: calc(1.5vw + 15px);
+  text-decoration: underline;
 }
 
 .formContainer {
