--- a/frontEnd/src/styles/reviewModal.css
+++ b/frontEnd/src/styles/reviewModal.css
@@ -1,3 +1,6 @@
+/*CSS for the Reviews Modal component*/
+
+
 .review-modal{
     position: fixed;
     top: 0%;
@@ -108,7 +111,7 @@
 #warning-modal{
     position: absolute;
     left: -40px;
-    top: 2px;
+    top: 5px;
     transform: scale(1.3);
 }
 
@@ -152,6 +155,10 @@
 
     .divider{
         margin: .75rem
+    }
+
+    #warning-modal{
+        top: 2px;
     }
     
 }
