--- a/frontEnd/src/styles/reviewModal.css
+++ b/frontEnd/src/styles/reviewModal.css
@@ -157,14 +157,18 @@
         margin: .75rem
     }
 
-    #warning-modal{
-        top: 2px;
+    .review-form{
+        overflow-y: scroll;
     }
 
     .review-button{
         padding: .35rem;
         margin: .25rem;
         font-size: 22px;
+    }
+
+    .review-form{
+        overflow-y: scroll;
     }
     
 }
